--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-web', version: $vertx_version
     compile group: 'io.vertx', name: 'vertx-lang-kotlin', version: $vertx_version
     compile group: 'io.vertx', name: 'vertx-lang-kotlin-coroutines', version: $vertx_version
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 }
 
 compileKotlin {
