Getting started with Vert.x

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.50'
+    ext.kotlin_version = '1.2.51'
 
     repositories {
         mavenCentral()
@@ -25,6 +25,7 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-web', version: $vertx_version
     compile group: 'io.vertx', name: 'vertx-lang-kotlin', version: $vertx_version
     compile group: 'io.vertx', name: 'vertx-lang-kotlin-coroutines', version: $vertx_version
+    compile group: 'io.vertx', name: 'vertx-jdbc-client', version: '3.0.0-milestone6'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 }
 
